# laundrobot

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: api.md  hardware.md  training.md
docs/assets/: README.md
examples/: record_dataset.py
lerobot_dashboard/: main.py
scripts/: check_cameras.sh  check_ports.sh  setup_udev.sh
