[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "laundrobot"
version = "0.1.0"
description = "Dual-arm robot teleoperation, animation and data-collection studio built on LeRobot"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Laundrobot Contributors" },
]
keywords = ["robotics", "lerobot", "so101", "teleoperation", "imitation-learning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "flask>=3.0",
  "flask-cors>=4.0",
  "opencv-python-headless>=4.8",
  "numpy>=1.24",
  "requests>=2.31",
  "pillow>=10.0",
  "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.3",
  "pre-commit>=3.6",
  "httpx>=0.26",           # for testing Flask routes
]

[project.scripts]
laundrobot = "lerobot_dashboard.main:main"

[project.urls]
Homepage = "https://github.com/your-org/laundrobot"
Repository = "https://github.com/your-org/laundrobot"
Issues = "https://github.com/your-org/laundrobot/issues"
Documentation = "https://github.com/your-org/laundrobot/tree/main/docs"

[tool.setuptools.packages.find]
include = ["lerobot_dashboard*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line too long — handled by formatter

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
